# CUDA_Ops

./: CMakeLists.txt  PeakFlopsTest.cu  README.md  block_warp_reduce_base_test.cu  main.cu  pch.cu  pch.cuh
example10_quantize/: quantize.cu
example11_gemv/: gemv.cuh  gemv_mat_vec.cu  gemv_vec_mat.cu
example2/: 2_indexing.cu
example3/: 3_1_vectorized_vectorAdd.cu  3_vectorAdd.cu
example4/: 4_device_query.cu
example5_reduce/: accumulator_baseline.cu  accumulator_v0.cu  accumulator_v1.cu  accumulator_v2.cu  accumulator_v3.cu  accumulator_v4.cu  accumulator_v5.cu  accumulator_v6.cu  accumulator_warp_primitive.cu  histogram_v0.cu  histogram_v1.cu  softmax.cu
example6_copy/: copy_if_baseline.cu  copy_if_v1.cu  copy_if_v2.cu
example7_elementwise/: fused_bias_mask_scale_and_add_baseline.cu  fused_bias_mask_scale_and_add_fp16.cu  fused_bias_mask_scale_and_add_fp32.cu  gelu_baseline.cu  gelu_intrinsic.cu
example8_performance/: PeakFlopsTest.cu  block_warp_reduce_base_test.cu
